--- a/pricing.html
+++ b/pricing.html
@@ -4,8 +4,9 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="./styles/Normalize.css" type="text/css">
         <link rel="stylesheet" href="/styles/pricing.css" type="text/css">
-        <link rel="stylesheet" href="./styles/navbar.css" type="text/css">
-        <link rel="stylesheet" href="./styles/footer.css" type="text/css">
+        <link rel="stylesheet" href="./styles/components/navbar.css" type="text/css">
+        <link rel="stylesheet" href="./styles/components/footer.css" type="text/css">
+        <link rel="stylesheet" href="./styles/components/totopbtn.css" type="text/css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Import Fonts -->
@@ -15,7 +16,7 @@
         <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
         
         <!-- JS Functions -->
-        <script src="./js/navbar.js"></script>
+        <script src="./js/components/navbar.js"></script>
 
         <title>Webify | Pricing</title>
     </head>
@@ -35,6 +36,7 @@
 
             <nav id="mobile-tabs" class="dark">
                 <a href="/pricing.html">Pricing</a>
+                <a href="/domain.html">Domains</a>
                 <a class="button">Get Started</a>
             </nav>
         </header>
@@ -196,6 +198,10 @@
                 </table>
             </div>
         </section>
+        
+        <a id="goto-top" href="#hero-section" class="hidden">
+            <i data-feather="chevron-up" class="icon"></i>
+        </a>
 
         <footer>
             <div class="left">
