fix(styles): reduced font sizes

--- a/domain.html
+++ b/domain.html
@@ -58,8 +58,8 @@
                 <h2 id="domain-title" class="margin0">Domains for You</h2>
                 <select id="sorter">
                     <option value="default">Default</option>
-                    <option value="asc">Price Asc</option>
-                    <option value="desc">Price Dsc</option>
+                    <option value="asc">Low to High (Price)</option>
+                    <option value="desc">High to Low (Price)</option>
                 </select>
             </div>
             <p class="margin0" id="search-result"></p>
