feat: add realistic data

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <section id="hero-section">
             <div class="header">
                 <h1 class="title margin0"><span class="typed-title">Design it, Ship it.</span><span class="title-cursor">|</span></h1>
-                <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In feugiat feugiat mauris. Sed egestas nulla lectus.</p>
+                <p class="desc"><b>Create with Limitless Possibilities.</b> What website will you create today?</p>
                 <button>Get Started</button>
             </div>
 
@@ -66,19 +66,19 @@
             <h2 class="title margin0">Creating <i>your</i> website, just got better.</h2>
             <section class="main-features">
                 <div class="feature">
-                    <img src="https://placehold.co/500x400">
+                    <img src="./img/ForEveryone.png">
                     <h4 class="name">For Everyone</h4>
                     <p class="desc margin0">Effortlessly Drag & Drop elements for beginners, Direct Code Editing for Pros.</p>
                 </div>
                 <div class="feature">
-                    <img src="https://placehold.co/500x400">
+                    <img src="./img/AdvancedAnalytics.png">
                     <h4 class="name">Advanced Analytics</h4>
                     <p class="desc margin0">Track your site's performance anytime, anywhere. Run A/B Tests like a professional.*</p>
                 </div>
                 <div class="feature">
-                    <img src="https://placehold.co/500x400">
+                    <img src="./img/DomainManagement.png">
                     <h4 class="name">Domain Management</h4>
-                    <p class="desc margin0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In feugiat feugiat mauris. Sed egestas nulla lectus.</p>
+                    <p class="desc margin0">Purchase, Renew, Manage. Simplify the intricacies of managing your domain.</p>
                 </div>
             </section>
 
@@ -109,37 +109,37 @@
                     
                     <div class="carousel-page">
                         <p class="carousel-text">
-                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam felis mi, mattis id vulputate at, rhoncus id orci. Cras eu elit ornare, congue urna vel, ullamcorper tellus."
+                            "Our marketing team loves the flexibility and ease of use offered by Webify. It allows us to create stunning landing pages for our events without ever touching any code. It's been a game-changer for us!"
                         </p>
                         <p class="carousel-title">
-                            Jane Doe - <span class="job">Managing Director @ Airbnb</span>
+                            Thomas Taylor - <span class="job">Marketing Manager @ Pear</span>
                         </p>
                     </div>
 
                     <div class="carousel-page" id="hidden">
                         <p class="carousel-text">
-                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam felis mi, mattis id vulputate at, rhoncus id orci. Cras eu elit ornare, congue urna vel, ullamcorper tellus."
+                            "As the CTO of a small technology startup, Webify has allowed us so much flexibility to build a website that suits our needs. From writing code to the final deployment, everything has worked as expected and even better."
                         </p>
                         <p class="carousel-title">
-                            John Doe - <span class="job">Chief of Technology @ OpenAI</span>
+                            Andrew Clark - <span class="job">Chief of Technology @ Emazon</span>
                         </p>
                     </div>
 
                     <div class="carousel-page" id="hidden">
                         <p class="carousel-text">
-                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam felis mi, mattis id vulputate at, rhoncus id orci. Cras eu elit ornare, congue urna vel, ullamcorper tellus."
+                            "Shipping production ready designs to my teams has never been easier. With Webify, I am able to collaborate with designers and developers to create the best website possible."
                         </p>
                         <p class="carousel-title">
-                            Jane Doe - <span class="job">Managing Director @ Airbnb</span>
+                            Madison Carter - <span class="job">UI/UX Designer @ Webflix</span>
                         </p>
                     </div>
 
                     <div class="carousel-page" id="hidden">
                         <p class="carousel-text">
-                            "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam felis mi, mattis id vulputate at, rhoncus id orci. Cras eu elit ornare, congue urna vel, ullamcorper tellus."
+                            "Being a blogger, I wanted a platform that lets me focus on writing instead of grappling with complex coding. This website builder is amazing! I can effortlessly design my blog, add new features, and make updates—all without any coding hassle."
                         </p>
                         <p class="carousel-title">
-                            Jane Doe - <span class="job">Managing Director @ Airbnb</span>
+                            Charles Thompson - <span class="job">Personal Blogger</span>
                         </p>
                     </div>
 
