fix(styles): updated styling

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                 <nav class="tabs">
                     <a href="/pricing.html">Pricing</a>
                     <a href="/domain.html">Domains</a>
+                    <hr>
+                    <a>Login</a>
                     <a class="button">Get Started</a>
                 </nav>
 
@@ -39,7 +41,11 @@
             <nav id="mobile-tabs">
                 <a href="/pricing.html">Pricing</a>
                 <a href="/domain.html">Domains</a>
-                <a class="button">Get Started</a>
+                <div class="login-signup">
+                    <a>Login</a>
+                    <hr>
+                    <a class="button">Get Started</a>
+                </div>
             </nav>
         </header>
 
@@ -66,17 +72,17 @@
             <h2 class="title margin0">Creating <i>your</i> website, just got better.</h2>
             <section class="main-features">
                 <div class="feature">
-                    <img src="./img/ForEveryone.png">
+                    <img src="./img/ForEveryone.jpg">
                     <h4 class="name">For Everyone</h4>
                     <p class="desc margin0">Effortlessly Drag & Drop elements for beginners, Direct Code Editing for Pros.</p>
                 </div>
                 <div class="feature">
-                    <img src="./img/AdvancedAnalytics.png">
+                    <img src="./img/AdvancedAnalytics.jpg">
                     <h4 class="name">Advanced Analytics</h4>
                     <p class="desc margin0">Track your site's performance anytime, anywhere. Run A/B Tests like a professional.*</p>
                 </div>
                 <div class="feature">
-                    <img src="./img/DomainManagement.png">
+                    <img src="./img/DomainManagement.jpg">
                     <h4 class="name">Domain Management</h4>
                     <p class="desc margin0">Purchase, Renew, Manage. Simplify the intricacies of managing your domain.</p>
                 </div>
@@ -109,37 +115,41 @@
                     
                     <div class="carousel-page">
                         <p class="carousel-text">
-                            "Our marketing team loves the flexibility and ease of use offered by Webify. It allows us to create stunning landing pages for our events without ever touching any code. It's been a game-changer for us!"
+                            “Our marketing team loves the flexibility and ease of use offered by Webify. It allows us to create stunning landing pages for our events without ever touching any code. It's been a game-changer for us!”
                         </p>
                         <p class="carousel-title">
-                            Thomas Taylor - <span class="job">Marketing Manager @ Pear</span>
+                            <span class="name">Thomas Taylor</span><br>
+                            <span class="job">Marketing Manager @ Pear</span>
                         </p>
                     </div>
 
                     <div class="carousel-page" id="hidden">
                         <p class="carousel-text">
-                            "As the CTO of a small technology startup, Webify has allowed us so much flexibility to build a website that suits our needs. From writing code to the final deployment, everything has worked as expected and even better."
+                            “As the CTO of a small technology startup, Webify has allowed us so much flexibility to build a website that suits our needs. From writing code to the final deployment, everything has worked as expected and even better.”
                         </p>
                         <p class="carousel-title">
-                            Andrew Clark - <span class="job">Chief of Technology @ Emazon</span>
+                            <span class="name">Andrew Clark</span><br>
+                            <span class="job">Chief of Technology @ Emazon</span>
                         </p>
                     </div>
 
                     <div class="carousel-page" id="hidden">
                         <p class="carousel-text">
-                            "Shipping production ready designs to my teams has never been easier. With Webify, I am able to collaborate with designers and developers to create the best website possible."
+                            “Shipping production ready designs to my teams has never been easier. With Webify, I am able to collaborate with designers and developers to create the best website possible.”
                         </p>
                         <p class="carousel-title">
-                            Madison Carter - <span class="job">UI/UX Designer @ Webflix</span>
+                            <span class="name">Madison Carter</span><br>
+                            <span class="job">UI/UX Designer @ Webflix</span>
                         </p>
                     </div>
 
                     <div class="carousel-page" id="hidden">
                         <p class="carousel-text">
-                            "Being a blogger, I wanted a platform that lets me focus on writing instead of grappling with complex coding. This website builder is amazing! I can effortlessly design my blog, add new features, and make updates—all without any coding hassle."
+                            “Being a blogger, I wanted a platform that lets me focus on writing instead of grappling with complex coding. This website builder is amazing! I can effortlessly design my blog, add new features, and make updates—all without any coding hassle.”
                         </p>
                         <p class="carousel-title">
-                            Charles Thompson - <span class="job">Personal Blogger</span>
+                            <span class="name">Charles Thompson</span><br>
+                            <span class="job">Personal Blogger</span>
                         </p>
                     </div>
 
