fix: used html and css validator

--- a/domain.html
+++ b/domain.html
@@ -28,6 +28,8 @@
                 <nav class="tabs">
                     <a href="/pricing.html">Pricing</a>
                     <a href="/domain.html">Domains</a>
+                    <hr>
+                    <a>Login</a>
                     <a class="button">Get Started</a>
                 </nav>
 
@@ -37,7 +39,11 @@
             <nav id="mobile-tabs" class="dark">
                 <a href="/pricing.html">Pricing</a>
                 <a href="/domain.html">Domains</a>
-                <a class="button">Get Started</a>
+                <div class="login-signup">
+                    <a>Login</a>
+                    <hr>
+                    <a class="button">Get Started</a>
+                </div>
             </nav>
         </header>
 
@@ -88,11 +94,11 @@
                 <i data-feather="linkedin" class="icon"></i>
             </div>
         </footer>
-    </body>
 
-    <!-- Import Icons -->
-    <script src="https://unpkg.com/feather-icons"></script>
-    <script>
-        feather.replace();
-    </script> 
+        <!-- Import Icons -->
+        <script src="https://unpkg.com/feather-icons"></script>
+        <script>
+            feather.replace();
+        </script> 
+    </body>
 </html>
