--- a/pricing.html
+++ b/pricing.html
@@ -28,6 +28,8 @@
                 <nav class="tabs">
                     <a href="/pricing.html">Pricing</a>
                     <a href="/domain.html">Domains</a>
+                    <hr>
+                    <a>Login</a>
                     <a class="button">Get Started</a>
                 </nav>
 
@@ -37,20 +39,24 @@
             <nav id="mobile-tabs" class="dark">
                 <a href="/pricing.html">Pricing</a>
                 <a href="/domain.html">Domains</a>
-                <a class="button">Get Started</a>
+                <div class="login-signup">
+                    <a>Login</a>
+                    <hr>
+                    <a class="button">Get Started</a>
+                </div>
             </nav>
         </header>
 
         <section id="hero-section">
-            <h1 class="title">Select the Perfect Tier<br> for you</h1>
+            <h2 class="title">Select the Perfect Tier<br> for you</h2>
             <!-- <p class="desc">wow</p> -->
         </section>
 
         <section id="price-tiers">
             <div class="tier">
-                <h2 class="name">Hobby</h2>
+                <h3 class="name">Hobby</h3>
                 <p class="desc">Kickstart your hobby or personal projects; Perfect for beginners.</p>
-                <h3 class="price">$0</h3>
+                <h4 class="price">$0</h4>
 
                 <hr>
 
@@ -73,9 +79,9 @@
             </div>
 
             <div class="tier">
-                <h2 class="name">Professional</h2>
+                <h3 class="name">Professional</h3>
                 <p class="desc">Everything in the Hobby Tier, and much more. Perfect for delving deeper into websites.</p>
-                <h3 class="price">$15<span class="price-per"> per month</span></h3>
+                <h4 class="price">$15<span class="price-per"> per month</span></h4>
 
                 <hr>
                 
@@ -98,9 +104,9 @@
             </div>
 
             <div class="tier">
-                <h2 class="name">Business</h2>
+                <h3 class="name">Business</h3>
                 <p class="desc">Tailored for bigger teams with support for more advanced features.</p>
-                <h3 class="price">$150<span class="price-per"> per month</span></h3>
+                <h4 class="price">$150<span class="price-per"> per month</span></h4>
 
                 <hr>
                 
@@ -215,11 +221,11 @@
                 <i data-feather="linkedin" class="icon"></i>
             </div>
         </footer>
-    </body>
 
-    <!-- Import Icons -->
-    <script src="https://unpkg.com/feather-icons"></script>
-    <script>
-        feather.replace();
-    </script> 
+        <!-- Import Icons -->
+        <script src="https://unpkg.com/feather-icons"></script>
+        <script>
+            feather.replace();
+        </script> 
+    </body>
 </html>
