--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <section id="hero-section">
             <div class="header">
-                <h1 class="title margin0"><span class="typed-title">Design it, Ship it.</span><span class="title-cursor">|</span></h1>
+                <h2 class="title margin0"><span class="typed-title">Design it, Ship it.</span><span class="title-cursor">|</span></h2>
                 <p class="desc"><b>Create with Limitless Possibilities.</b> What website will you create today?</p>
                 <button>Get Started</button>
             </div>
@@ -65,24 +65,24 @@
                 <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nibh tellus, ornare sit amet sapien pharetra, bibendum fringilla ante. Nullam arcu nulla, aliquet vitae venenatis in, dictum a quam. Donec a leo lectus. Curabitur magna lorem, vestibulum commodo sodales sit amet, pretium tristique eros. Curabitur at vestibulum velit. In tincidunt leo sit amet tempus ultricies. Sed sagittis finibus neque, vitae bibendum risus dignissim eget. Mauris dapibus quam eget nulla auctor, ac ultricies tellus iaculis.            </p>    
             </div>
             <!-- Temporary Image -->
-            <img src="https://placehold.co/600x400/png"> 
+            <img src="https://placehold.co/600x400/png" alt="Placeholder Image"> 
         </section>
 
         <section id="features">
             <h2 class="title margin0">Creating <i>your</i> website, just got better.</h2>
             <section class="main-features">
                 <div class="feature">
-                    <img src="./img/ForEveryone.jpg">
+                    <img src="./img/ForEveryone.jpg" alt="For Everyone">
                     <h4 class="name">For Everyone</h4>
                     <p class="desc margin0">Effortlessly Drag & Drop elements for beginners, Direct Code Editing for Pros.</p>
                 </div>
                 <div class="feature">
-                    <img src="./img/AdvancedAnalytics.jpg">
+                    <img src="./img/AdvancedAnalytics.jpg" alt="Advanced Analytics">
                     <h4 class="name">Advanced Analytics</h4>
                     <p class="desc margin0">Track your site's performance anytime, anywhere. Run A/B Tests like a professional.*</p>
                 </div>
                 <div class="feature">
-                    <img src="./img/DomainManagement.jpg">
+                    <img src="./img/DomainManagement.jpg" alt="Domain Management">
                     <h4 class="name">Domain Management</h4>
                     <p class="desc margin0">Purchase, Renew, Manage. Simplify the intricacies of managing your domain.</p>
                 </div>
@@ -123,7 +123,7 @@
                         </p>
                     </div>
 
-                    <div class="carousel-page" id="hidden">
+                    <div class="carousel-page hidden">
                         <p class="carousel-text">
                             “As the CTO of a small technology startup, Webify has allowed us so much flexibility to build a website that suits our needs. From writing code to the final deployment, everything has worked as expected and even better.”
                         </p>
@@ -133,7 +133,7 @@
                         </p>
                     </div>
 
-                    <div class="carousel-page" id="hidden">
+                    <div class="carousel-page hidden">
                         <p class="carousel-text">
                             “Shipping production ready designs to my teams has never been easier. With Webify, I am able to collaborate with designers and developers to create the best website possible.”
                         </p>
@@ -143,7 +143,7 @@
                         </p>
                     </div>
 
-                    <div class="carousel-page" id="hidden">
+                    <div class="carousel-page hidden">
                         <p class="carousel-text">
                             “Being a blogger, I wanted a platform that lets me focus on writing instead of grappling with complex coding. This website builder is amazing! I can effortlessly design my blog, add new features, and make updates—all without any coding hassle.”
                         </p>
@@ -157,18 +157,18 @@
                 </div>
             </div>
             <div class="carousel-pagination margin0">
-                <p class="pagination-circle margin0" id="active"></p>
-                <p class="pagination-circle margin0" id=""></p>
-                <p class="pagination-circle margin0" id=""></p>
-                <p class="pagination-circle margin0" id=""></p>
+                <div class="pagination-circle margin0 active"></div>
+                <div class="pagination-circle margin0"></div>
+                <div class="pagination-circle margin0"></div>
+                <div class="pagination-circle margin0"></div>
             </div>
             <div class="testimonial-companies">
-                <img src="/img/AirbnbLogo.png" class="testimonial-img">
-                <img src="/img/FigmaIcon.svg" class="testimonial-img">
-                <img src="/img/OpenAILogo.svg" class="testimonial-img">
-                <img src="/img/Notion.svg" class="testimonial-img">
-                <img src="/img/Carousell.svg" class="testimonial-img">
-                <img src="/img/Grab.svg" class="testimonial-img">
+                <img src="/img/AirbnbLogo.png" class="testimonial-img" alt="Airbnb">
+                <img src="/img/FigmaIcon.svg" class="testimonial-img" alt="Figma">
+                <img src="/img/OpenAILogo.svg" class="testimonial-img" alt="OpenAI">
+                <img src="/img/Notion.svg" class="testimonial-img" alt="Notion">
+                <img src="/img/Carousell.svg" class="testimonial-img" alt="Carousell">
+                <img src="/img/Grab.svg" class="testimonial-img" alt="Grab">
             </div>
         </section>
 
@@ -264,11 +264,11 @@
                 <i data-feather="linkedin" class="icon"></i>
             </div>
         </footer>
+        
+        <!-- Import Icons -->
+        <script src="https://unpkg.com/feather-icons"></script>
+        <script>
+            feather.replace();
+        </script> 
     </body>
-    
-    <!-- Import Icons -->
-    <script src="https://unpkg.com/feather-icons"></script>
-    <script>
-        feather.replace();
-    </script> 
 </html>
