--- a/index.html
+++ b/index.html
@@ -60,12 +60,16 @@
         </section>
 
         <section id="whoweare">
-            <div class="text-section">
-                <h2 class="title margin0">Who are we?</h2>
-                <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nibh tellus, ornare sit amet sapien pharetra, bibendum fringilla ante. Nullam arcu nulla, aliquet vitae venenatis in, dictum a quam. Donec a leo lectus. Curabitur magna lorem, vestibulum commodo sodales sit amet, pretium tristique eros. Curabitur at vestibulum velit. In tincidunt leo sit amet tempus ultricies. Sed sagittis finibus neque, vitae bibendum risus dignissim eget. Mauris dapibus quam eget nulla auctor, ac ultricies tellus iaculis.            </p>    
+            <div>
+                <h2 class="title margin0">Why <b>Webify</b> is the best choice for you</h2>
+                <a class="button">Get Started</a>
             </div>
-            <!-- Temporary Image -->
-            <img src="https://placehold.co/600x400/png" alt="Placeholder Image"> 
+            <p class="desc margin0">
+                When creating a website, you want to have a peace of mind. With Webify, you can rest assured that with our top-notch features, you can create a website you are proud of and run smoothly around the clock.
+                <span class="para-break"></span>
+                Whether you are a developer or a beginner who needs a website that works, Webify allows you to express your creativity. Not sure how to code? Simply Drag and Drop Elements onto the screen. Need more advanced features? Edit the Site's Source Code.
+                <span class="para-break"></span>
+                Start developing your dream website today. Reach out to our professional support team should you have any questions. Join our community of millions who have already chosen to create with us.            </p>
         </section>
 
         <section id="features">
@@ -163,19 +167,22 @@
                 <div class="pagination-circle margin0"></div>
             </div>
             <div class="testimonial-companies">
-                <img src="/img/AirbnbLogo.png" class="testimonial-img" alt="Airbnb">
-                <img src="/img/FigmaIcon.svg" class="testimonial-img" alt="Figma">
-                <img src="/img/OpenAILogo.svg" class="testimonial-img" alt="OpenAI">
-                <img src="/img/Notion.svg" class="testimonial-img" alt="Notion">
-                <img src="/img/Carousell.svg" class="testimonial-img" alt="Carousell">
-                <img src="/img/Grab.svg" class="testimonial-img" alt="Grab">
+                <h3>Companies we've worked with</h3>
+                <div class="company-list">
+                    <img src="/img/AirbnbLogo.png" class="testimonial-img" alt="Airbnb">
+                    <img src="/img/FigmaIcon.svg" class="testimonial-img" alt="Figma">
+                    <img src="/img/OpenAILogo.svg" class="testimonial-img" alt="OpenAI">
+                    <img src="/img/Notion.svg" class="testimonial-img" alt="Notion">
+                    <img src="/img/Carousell.svg" class="testimonial-img" alt="Carousell">
+                    <img src="/img/Grab.svg" class="testimonial-img" alt="Grab">
+                </div>
             </div>
         </section>
 
         <section id="contact-faq">
             <section id="contact">
-                <h2 class="title margin0">Contact Us</h2>
-                <p class="desc">Contact us if you have any questions or are enquiring about the Business plan. We will get back to you within 5 working days.</p>
+                <h2 class="title margin0"><b>Got a Question?</b> <br><span class="subtext">Get in Touch.</span></h2>
+                <p class="desc">Get in touch with us if you have any questions or are enquiring about the Business plan. We will get back to you within 5 working days.</p>
                 <form id="contact-form">
                     <label>
                         Name
