--- a/pricing.html
+++ b/pricing.html
@@ -48,7 +48,7 @@
         </header>
 
         <section id="hero-section">
-            <h2 class="title">Select the Perfect Tier<br> for you</h2>
+            <h2 class="title">Select the Perfect Tier<br> for <span class="bold">you</span></h2>
             <!-- <p class="desc">wow</p> -->
         </section>
 
