feat(docs, css): used transform, added comments

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </head>
 
     <body>
+        <!-- Navigation Bar -->
         <header id="navigation">
             <div id="navbar">
                 <h1><a href="/">Webify</a></h1>
@@ -49,6 +50,7 @@
             </nav>
         </header>
 
+        <!-- Hero Section -->
         <section id="hero-section">
             <div class="header">
                 <h2 class="title margin0"><span class="typed-title">Design it, Ship it.</span><span class="title-cursor">|</span></h2>
@@ -59,6 +61,7 @@
             <i data-feather="chevron-down" class="down-arrow"></i>
         </section>
 
+        <!-- Why choose Webify? -->
         <section id="whoweare">
             <div>
                 <h2 class="title margin0">Why <b>Webify</b> is the best choice for you</h2>
@@ -72,6 +75,7 @@
                 Start developing your dream website today. Reach out to our professional support team should you have any questions. Join our community of millions who have already chosen to create with us.            </p>
         </section>
 
+        <!-- Features Section (3 main features, list of other features) -->
         <section id="features">
             <h2 class="title margin0">Creating <i>your</i> website, just got better.</h2>
             <section class="main-features">
@@ -111,6 +115,7 @@
             <p class="disclaimer"><i>Features highlighted with an asterisk (*) may be limited or may not be included in the free tier. Visit the <a href="/pricing.html">Pricing</a> site for more information.</i></p>
         </section>
 
+        <!-- Testimonials Section (Carousel, Companies) -->
         <section id="testimonials">
             <h2 class="title margin0">Chosen by many, Trusted by all</h2>
             <div class="carousel">
@@ -179,6 +184,7 @@
             </div>
         </section>
 
+        <!-- Contact Section and Frequently Asked Questions -->
         <section id="contact-faq">
             <section id="contact">
                 <h2 class="title margin0"><b>Got a Question?</b> <br><span class="subtext">Get in Touch.</span></h2>
