--- a/pricing.html
+++ b/pricing.html
@@ -21,6 +21,7 @@
         <title>Webify | Pricing</title>
     </head>
     <body>
+        <!-- Navigation Bar -->
         <header id="navigation">
             <div id="navbar" class="dark">
                 <h1><a href="/">Webify</a></h1>
@@ -47,11 +48,12 @@
             </nav>
         </header>
 
+        <!-- Hero Title -->
         <section id="hero-section">
             <h2 class="title">Select the Perfect Tier<br> for <span class="bold">you</span></h2>
-            <!-- <p class="desc">wow</p> -->
         </section>
 
+        <!-- Price Tiers -->
         <section id="price-tiers">
             <div class="tier">
                 <h3 class="name">Hobby</h3>
@@ -128,6 +130,7 @@
             </div>
         </section>
 
+        <!-- Table to compare different features -->
         <section id="feature-comparison">
             <h2 class="subtitle">Compare Tiers</h2>
             <p>Find out more about out different Tiers in more detail. Choose the one that suits your use-case best.</p>
