--- a/domain.html
+++ b/domain.html
@@ -21,6 +21,7 @@
         <title>Webify | Domains</title>
     </head>
     <body>
+        <!-- Navigation Bar -->
         <header id="navigation">
             <div id="navbar" class="dark">
                 <h1><a href="/">Webify</a></h1>
@@ -47,6 +48,7 @@
             </nav>
         </header>
 
+        <!-- Hero Section -->
         <section id="hero-section">
             <div class="title-desc">
                 <h1 class="margin0">Find your Domain</h1>
@@ -59,6 +61,7 @@
             <hr style="width: 90%;">
         </section>
 
+        <!-- List of Domains Section -->
         <section id="recommended-domains">
             <div class="header">
                 <h2 id="domain-title" class="margin0">Domains for You</h2>
@@ -73,7 +76,7 @@
                 <div class="default-domainlist">
                     <i data-feather="search" class="initial-icon"></i>
                     <p class="margin0 cannot-find">Oops! There's nothing here!</p>
-                    Start by Searching for a Top-Level Domain!
+                    Start by Searching for a Domain first!
                 </div>
             </div>
         </section>
