fix: rename files

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="./styles/Normalize.css" type="text/css">
+        <link rel="stylesheet" href="./styles/normalize.css" type="text/css">
         <link rel="stylesheet" href="./styles/components/navbar.css" type="text/css">
         <link rel="stylesheet" href="./styles/components/totopbtn.css" type="text/css">
         <link rel="stylesheet" href="./styles/components/footer.css" type="text/css">
@@ -80,17 +80,17 @@
             <h2 class="title margin0">Creating <i>your</i> website, just got better.</h2>
             <section class="main-features">
                 <div class="feature">
-                    <img src="./img/ForEveryone.jpg" alt="For Everyone">
+                    <img src="./img/for-everyone.jpg" alt="For Everyone">
                     <h4 class="name">For Everyone</h4>
                     <p class="desc margin0">Effortlessly Drag & Drop elements for beginners, Direct Code Editing for Pros.</p>
                 </div>
                 <div class="feature">
-                    <img src="./img/AdvancedAnalytics.jpg" alt="Advanced Analytics">
+                    <img src="./img/advanced-analytics.jpg" alt="Advanced Analytics">
                     <h4 class="name">Advanced Analytics</h4>
                     <p class="desc margin0">Track your site's performance anytime, anywhere. Run A/B Tests like a professional.*</p>
                 </div>
                 <div class="feature">
-                    <img src="./img/DomainManagement.jpg" alt="Domain Management">
+                    <img src="./img/domain-management.jpg" alt="Domain Management">
                     <h4 class="name">Domain Management</h4>
                     <p class="desc margin0">Purchase, Renew, Manage. Simplify the intricacies of managing your domain.</p>
                 </div>
@@ -174,12 +174,12 @@
             <div class="testimonial-companies">
                 <h3>Companies we've worked with</h3>
                 <div class="company-list">
-                    <img src="/img/AirbnbLogo.png" class="testimonial-img" alt="Airbnb">
-                    <img src="/img/FigmaIcon.svg" class="testimonial-img" alt="Figma">
-                    <img src="/img/OpenAILogo.svg" class="testimonial-img" alt="OpenAI">
-                    <img src="/img/Notion.svg" class="testimonial-img" alt="Notion">
-                    <img src="/img/Carousell.svg" class="testimonial-img" alt="Carousell">
-                    <img src="/img/Grab.svg" class="testimonial-img" alt="Grab">
+                    <img src="/img/airbnb-logo.png" class="testimonial-img" alt="Airbnb">
+                    <img src="/img/figma-icon.svg" class="testimonial-img" alt="Figma">
+                    <img src="/img/openai-icon.svg" class="testimonial-img" alt="OpenAI">
+                    <img src="/img/notion-icon.svg" class="testimonial-img" alt="Notion">
+                    <img src="/img/carousell-logo.svg" class="testimonial-img" alt="Carousell">
+                    <img src="/img/grab-icon.svg" class="testimonial-img" alt="Grab">
                 </div>
             </div>
         </section>
