--- a/pricing.html
+++ b/pricing.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="./styles/Normalize.css" type="text/css">
+        <link rel="stylesheet" href="./styles/normalize.css" type="text/css">
         <link rel="stylesheet" href="/styles/pricing.css" type="text/css">
         <link rel="stylesheet" href="./styles/components/navbar.css" type="text/css">
         <link rel="stylesheet" href="./styles/components/footer.css" type="text/css">
