--- a/domain.html
+++ b/domain.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./styles/Normalize.css" type="text/css">
+        <link rel="stylesheet" href="./styles/normalize.css" type="text/css">
         <link rel="stylesheet" href="./styles/components/navbar.css" type="text/css">
         <link rel="stylesheet" href="./styles/components/totopbtn.css" type="text/css">
         <link rel="stylesheet" href="./styles/domain.css" type="text/css">
